Closed
Bug 1222819
Opened 10 years ago
Closed 10 years ago
crash in grabdll.dll@0x17517 (Orbit Downloader) rising in Firefox 43
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: philipp, Assigned: philipp)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
969 bytes,
patch
|
bugzilla
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-fc4ff7f3-4abf-44cd-8ddc-4ab272151104.
=============================================================
Crashing Thread
Frame Module Signature Source
Ø 0 grabdll.dll grabdll.dll@0x17517
Ø 1 grabdll.dll grabdll.dll@0xd81a
Ø 2 grabdll.dll grabdll.dll@0x91ac
Ø 3 grabdll.dll grabdll.dll@0x92a7
Ø 4 grabdll.dll grabdll.dll@0x753d
Ø 5 grabdll.dll grabdll.dll@0x75c3
Ø 6 grabkernel.dll grabkernel.dll@0x2e53
7 nss3.dll _MD_CloseSocket nsprpub/pr/src/md/windows/w95sock.c
8 nss3.dll SocketClose nsprpub/pr/src/io/prsocket.c
9 xul.dll mozilla::net::ClosingService::ThreadFunc() netwerk/base/ClosingService.cpp
10 nss3.dll _PR_NativeRunThread nsprpub/pr/src/threads/combined/pruthr.c
11 nss3.dll pr_root nsprpub/pr/src/md/windows/w95thred.c
12 msvcr120.dll _callthreadstartex f:\dd\vctools\crt\crtw32\startup\threadex.c:376
13 msvcr120.dll msvcr120.dll@0x2c000
14 kernel32.dll BaseThreadInitThunk
15 ntdll.dll __RtlUserThreadStart
16 ntdll.dll _RtlUserThreadStart
though crashes with grabdll.dll (related to the orbit downloader program) have been around for a while, they are significantly rising in firefox 43.0b1.
all variants of the signature make up ~1.3% of crashes on 43.0b1 but due to it happening more on startup an multiple times for particular installations, it's on #2 & #6 of the top score board, so it might be worth looking into blacklisting this stuff if things don't improve in the next betas.
Comment 1•10 years ago
|
||
[Tracking Requested - why for this release]:
Given that this is a startup crash in many cases, this has gone down in stats (due to people not using beta any more, being unable to update. etc) but it's still an issue even in 43.0b5 - and it will be an even larger issue on release if we don't find a way to deal with this, so we need to track.
status-firefox43:
--- → affected
tracking-firefox43:
--- → ?
| Assignee | ||
Comment 2•10 years ago
|
||
preparing a blocklist patch for the lack of other ideas
Attachment #8692645 -
Flags: review?(benjamin)
Comment 3•10 years ago
|
||
Comment on attachment 8692645 [details] [diff] [review]
blocklist_bug1222819.patch
Review of attachment 8692645 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, but we should make an additional change. Also please rebase your patch since I just removed the Ad Muncher entry.
::: mozglue/build/WindowsDllBlocklist.cpp
@@ +184,5 @@
> { "nlsp.dll", MAKE_VERSION(6, 23, 2012, 19) },
>
> // AdMuncher, bug 1222933
> { "am32-34121.dll", MAKE_VERSION(4, 73, 0, 30530) },
> +
Nit: there are a couple of blank spaces here, please remove those.
@@ +186,5 @@
> // AdMuncher, bug 1222933
> { "am32-34121.dll", MAKE_VERSION(4, 73, 0, 30530) },
> +
> + // Orbit Downloader, bug 1222819
> + { "grabdll.dll", MAKE_VERSION(2, 6, 1, 0) },
I think you should add grabkernel.dll version 1.0.0.1 as well given that they appear to be partners in crime.
Attachment #8692645 -
Flags: review?(benjamin) → review-
| Assignee | ||
Comment 5•10 years ago
|
||
incorporating changes raised in the first review comment
(skipping the rebasing part as per conversation on irc and letting mercurial work its smartness there)
Assignee: nobody → madperson
Attachment #8692645 -
Attachment is obsolete: true
Attachment #8694348 -
Flags: review?(aklotz)
Updated•10 years ago
|
Attachment #8694348 -
Flags: review?(aklotz) → review+
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8694348 [details] [diff] [review]
blocklist_bug122281v2.patch
Approval Request Comment
[Feature/regressing bug #]: DLL blocklist
[User impact if declined]: crashes on startup caused by external dll
[Describe test coverage new/current, TreeHerder]: N/A
[Risks and why]: Low, adds entry to blocklist data
[String/UUID change made/needed]: None
Attachment #8694348 -
Flags: approval-mozilla-beta?
Attachment #8694348 -
Flags: approval-mozilla-aurora?
Comment 8•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 9•10 years ago
|
||
Comment on attachment 8694348 [details] [diff] [review]
blocklist_bug122281v2.patch
Block for an extension causing a topcrash. Please uplift to aurora and beta.
Attachment #8694348 -
Flags: approval-mozilla-beta?
Attachment #8694348 -
Flags: approval-mozilla-beta+
Attachment #8694348 -
Flags: approval-mozilla-aurora?
Attachment #8694348 -
Flags: approval-mozilla-aurora+
Comment 10•10 years ago
|
||
| bugherder uplift | ||
status-firefox44:
--- → fixed
Comment 11•10 years ago
|
||
| bugherder uplift | ||
Comment 12•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•