Bug 1222819 - Add Orbit Downloader .dlls to Windows blocklist. r=aklotz a=lizzard