mozglue/build/WindowsDllBlocklist.cpp
@@ -183,6 +183,10 @@ static DllBlockInfo sWindowsDllBlocklist[] = {
   // NetOp School, discontinued product, bug 763395
   { "nlsp.dll", MAKE_VERSION(6, 23, 2012, 19) },
 
+  // Orbit Downloader, bug 1222819
+  { "grabdll.dll", MAKE_VERSION(2, 6, 1, 0) },
+  { "grabkernel.dll", MAKE_VERSION(1, 0, 0, 1) },
+
   { nullptr, 0 }
 };
 
